--- a/index.html
+++ b/index.html
@@ -181,12 +181,9 @@
 <body>
   <div class="container">
     <div class="nav-area">
-      <a href="#about" class="nav-link nav-about">about</a>
-      <a href="#work" class="nav-link nav-work">work</a>
-      <a href="#contact" class="nav-link nav-contact">contact</a>
-      <a href="#journal" class="nav-link nav-extra1">journal</a>
-      <a href="#archive" class="nav-link nav-extra2">archive</a>
-      <a href="#scent" class="nav-link nav-extra3">scent</a>
+      <a href="about.html" class="nav-link nav-about">about</a>
+      <a href="work.html" class="nav-link nav-work">work</a>
+      <a href="contact.html" class="nav-link nav-contact">contact</a>
       <div class="nav-link nav-name">mmmichele</div>
       <footer>© mmmichele</footer>
     </div>
