--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       <a href="about.html" class="nav-link nav-about">about</a>
       <a href="work.html" class="nav-link nav-work">work</a>
       <a href="contact.html" class="nav-link nav-contact">contact</a>
-      <a href="mmmichele.bigcartel.com" class="nav-link nav-shop">shop</a>
+      <a href="https://mmmichele.bigcartel.com/" class="nav-link nav-shop" target="_blank" rel="noopener">shop</a>
       <div class="nav-link nav-name">mmmichele</div>
       <footer>© mmmichele</footer>
     </div>
