--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     .nav-about { top: 60%; left: 40%; animation: float1 7s ease-in-out infinite alternate; }
     .nav-work { top: 30%; left: 60%; animation: float2 6s ease-in-out infinite alternate; }
     .nav-contact { top: 70%; left: 50%; animation: float3 8s ease-in-out infinite alternate; }
-    .nav-extra1 { top: 50%; left: 25%; animation: float4 5.5s ease-in-out infinite alternate; }
+    .nav-shop { top: 50%; left: 25%; animation: float4 5.5s ease-in-out infinite alternate; }
     .nav-extra2 { top: 40%; left: 15%; animation: float5 6.5s ease-in-out infinite alternate; }
     .nav-extra3 { top: 80%; left: 35%; animation: float6 7.5s ease-in-out infinite alternate; }
     .nav-name {
