--- a/about.html
+++ b/about.html
@@ -109,6 +109,7 @@
     <a href="about.html" class="active">about</a>
     <a href="art.html">art</a>
     <a href="contact.html">contact</a>
+     <a href="https://mmmichele.bigcartel.com/" class="nav-link nav-shop" target="_blank" rel="noopener">shop</a>
   </nav>
 
   <!-- About content -->
