--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
   <main class="about-container">
     <h1>About Michele</h1>
     <p>
-      Michele is a Seattle-based multimedia artist whose work blends utilitarian form with experimental process. Exploring how everyday objects and overlooked moments can carry emotional and artistic weight, her practice invites connection and reflection—on time, imperfection, and perspective.
+      Michele is a Seattle-based multimedia artist whose work blends utilitarian form with experimental process. Exploring how everyday objects and overlooked moments can carry emotional and artistic weight, her practice invites connection and reflection, on time, imperfection, and perspective.
     </p>
   </main>
 
