--- a/about.html
+++ b/about.html
@@ -108,8 +108,9 @@
     <a href="index.html">home</a>
     <a href="about.html" class="active">about</a>
     <a href="art.html">art</a>
+    <a href="work.html">work</a>
     <a href="contact.html">contact</a>
-     <a href="https://mmmichele.bigcartel.com/" class="nav-link nav-shop" target="_blank" rel="noopener">shop</a>
+    <a href="https://mmmichele.bigcartel.com/" class="nav-link nav-shop" target="_blank" rel="noopener">shop</a>
   </nav>
 
   <!-- About content -->
