--- a/work.html
+++ b/work.html
@@ -4,52 +4,165 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Work | mmmichele</title>
-  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="style.css" />
   <style>
-    body {
-      padding: 2rem;
-      background: var(--bg-left);
+    main {
+      max-width: 900px;
+      margin: 3rem auto 5rem;
+      padding: 0 1rem;
       color: var(--text);
       font-family: var(--font-body);
-      min-height: 100vh;
     }
+
     h1 {
-      margin-bottom: 1.5rem;
       font-weight: 700;
-      font-size: 2.4rem;
+      font-size: 2.5rem;
+      margin-bottom: 2rem;
       color: var(--highlight);
     }
-    ul.work-categories {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      max-width: 400px;
+
+    /* Category filter buttons */
+    .filters {
+      margin-bottom: 2rem;
+      display: flex;
+      gap: 1rem;
+      flex-wrap: wrap;
     }
-    ul.work-categories li {
-      margin-bottom: 1rem;
+
+    .filters button {
+      background: none;
+      border: 2px solid var(--highlight);
+      color: var(--highlight);
+      padding: 0.4rem 1rem;
+      font-size: 1rem;
+      cursor: pointer;
+      border-radius: 6px;
+      transition: background-color 0.3s ease, color 0.3s ease;
     }
-    ul.work-categories li a {
-      text-decoration: none;
-      font-size: 1.5rem;
+
+    .filters button.active,
+    .filters button:hover {
+      background: var(--highlight);
+      color: white;
+    }
+
+    /* Grid of projects */
+    .projects {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 2rem;
+    }
+
+    .project-card {
+      background: var(--bg-left);
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      overflow: hidden;
+      cursor: pointer;
+      transition: transform 0.2s ease;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .project-card:hover {
+      transform: translateY(-6px);
+    }
+
+    .project-image {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      border-bottom: 1px solid var(--line);
+    }
+
+    .project-info {
+      padding: 1rem 1.2rem;
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    .project-title {
+      font-weight: 600;
+      font-size: 1.3rem;
+      margin: 0 0 0.4rem;
       color: var(--text);
-      border-bottom: 2px solid transparent;
-      transition: border-color 0.3s ease;
     }
-    ul.work-categories li a:hover {
-      border-color: var(--highlight);
-      color: var(--highlight);
+
+    .project-description {
+      margin: 0;
+      color: var(--line);
+      font-size: 1rem;
+      flex-grow: 1;
     }
   </style>
 </head>
 <body>
   <main>
-    <h1>Work Categories</h1>
-    <ul class="work-categories">
-      <li><a href="woodworking.html">Woodworking</a></li>
-      <li><a href="cyanotypes.html">Cyanotypes</a></li>
-      <li><a href="filmphotography.html">Film Photography</a></li>
-      <!-- Add more categories here -->
-    </ul>
+    <h1>Work</h1>
+
+    <!-- Filter Buttons -->
+    <div class="filters" aria-label="Filter projects by category">
+      <button class="active" data-filter="all">All</button>
+      <button data-filter="woodworking">Woodworking</button>
+      <button data-filter="cyanotypes">Cyanotypes</button>
+      <button data-filter="printmaking">Printmaking</button>
+    </div>
+
+    <!-- Projects Grid -->
+    <div class="projects">
+      <div class="project-card" data-category="woodworking">
+        <img class="project-image" src="images/wood1.jpg" alt="Wooden bowl" />
+        <div class="project-info">
+          <h3 class="project-title">Handcrafted Wooden Bowl</h3>
+          <p class="project-description">Turned wood bowl with natural finish, 2023.</p>
+        </div>
+      </div>
+
+      <div class="project-card" data-category="cyanotypes">
+        <img class="project-image" src="images/cyan1.jpg" alt="Cyanotype print" />
+        <div class="project-info">
+          <h3 class="project-title">Blue Cyanotype Print</h3>
+          <p class="project-description">Sun-exposed cyanotype on handmade paper, 2022.</p>
+        </div>
+      </div>
+
+      <div class="project-card" data-category="printmaking">
+        <img class="project-image" src="images/print1.jpg" alt="Linocut print" />
+        <div class="project-info">
+          <h3 class="project-title">Linocut Print Series</h3>
+          <p class="project-description">Limited edition prints carved and printed by hand.</p>
+        </div>
+      </div>
+
+      <!-- Add more projects here with matching structure and correct data-category -->
+    </div>
   </main>
+
+  <script>
+    // Filter functionality (vanilla JS)
+    const filterButtons = document.querySelectorAll('.filters button');
+    const projects = document.querySelectorAll('.project-card');
+
+    filterButtons.forEach(button => {
+      button.addEventListener('click', () => {
+        // Remove active class from all buttons
+        filterButtons.forEach(btn => btn.classList.remove('active'));
+        // Add active class to clicked button
+        button.classList.add('active');
+
+        const filter = button.getAttribute('data-filter');
+
+        projects.forEach(project => {
+          if (filter === 'all' || project.getAttribute('data-category') === filter) {
+            project.style.display = 'flex';
+          } else {
+            project.style.display = 'none';
+          }
+        });
+      });
+    });
+  </script>
 </body>
 </html>
