--- a/work.html
+++ b/work.html
@@ -145,30 +145,30 @@
       <button type="button" class="filter-btn active" data-filter="all">All</button>
       <button type="button" class="filter-btn" data-filter="woodworking">Woodworking</button>
       <button type="button" class="filter-btn" data-filter="cyanotypes">Cyanotypes</button>
-      <button type="button" class="filter-btn" data-filter="sculpture">Sculpture</button>
+      <button type="button" class="filter-btn" data-filter="pottery">Pottery</button>
       <!-- Add more filter buttons here -->
     </div>
 
     <!-- Gallery grid -->
     <div class="gallery" aria-live="polite">
       <figure data-tags="woodworking">
-        <img src="images/woodwork1.jpg" alt="Woodworking project 1" />
-        <figcaption>Woodworking Project 1</figcaption>
+        <img src="images/Tomswalnut.jpg" alt="Toms walnut" />
+        <figcaption>Walnut Platters 2025</figcaption>
       </figure>
 
       <figure data-tags="cyanotypes">
-        <img src="images/cyanotype1.jpg" alt="Cyanotype artwork 1" />
-        <figcaption>Cyanotype Artwork 1</figcaption>
+        <img src="images/kellycyanotype2024.jpg" alt="Kelly Cyanotype" />
+        <figcaption>Kelly on Portra 2024</figcaption>
       </figure>
 
       <figure data-tags="woodworking">
-        <img src="images/woodwork2.jpg" alt="Woodworking project 2" />
-        <figcaption>Woodworking Project 2</figcaption>
+        <img src="images/allspaltedmaple.jpg" alt="Spalted Maple" />
+        <figcaption>Spalted Maple Bowls 2024</figcaption>
       </figure>
 
-      <figure data-tags="sculpture">
-        <img src="images/sculpture1.jpg" alt="Sculpture artwork 1" />
-        <figcaption>Sculpture Artwork 1</figcaption>
+      <figure data-tags="Pottery">
+        <img src="images/Potteryset.jpg" alt="Pottery Set" />
+        <figcaption>Nerikomi Breakfast Pottery Set</figcaption>
       </figure>
 
       <!-- Add more figures with correct data-tags -->
