--- a/work.html
+++ b/work.html
@@ -152,22 +152,22 @@
     <!-- Gallery grid -->
     <div class="gallery" aria-live="polite">
       <figure data-tags="woodworking">
-        <img src="images/Tomswalnut.jpg" alt="Toms walnut" />
+        <img src="images/tomswalnut.jpeg" alt="Toms walnut" />
         <figcaption>Walnut Platters 2025</figcaption>
       </figure>
 
       <figure data-tags="cyanotypes">
-        <img src="images/kellycyanotype2024.jpg" alt="Kelly Cyanotype" />
+        <img src="images/kellycyanotype2024.jpeg" alt="Kelly Cyanotype" />
         <figcaption>Kelly on Portra 2024</figcaption>
       </figure>
 
       <figure data-tags="woodworking">
-        <img src="images/allspaltedmaple.jpg" alt="Spalted Maple" />
+        <img src="images/allspaltedmaple.jpeg" alt="Spalted Maple" />
         <figcaption>Spalted Maple Bowls 2024</figcaption>
       </figure>
 
       <figure data-tags="Pottery">
-        <img src="images/Potteryset.jpg" alt="Pottery Set" />
+        <img src="images/potteryset.jpeg" alt="Pottery Set" />
         <figcaption>Nerikomi Breakfast Pottery Set</figcaption>
       </figure>
 
