--- a/work.html
+++ b/work.html
@@ -73,6 +73,7 @@
     }
 
     .gallery img {
+      max-width: 300px; 
       width: 100%;
       height: auto;
       display: block;
@@ -91,7 +92,7 @@
       margin-top: 0.5rem;
       font-size: 0.9rem;
       color: #444;
-      text-align: center;
+      text-align: left;
     }
 
     /* Floating Nav Styles */
