--- a/work.html
+++ b/work.html
@@ -154,22 +154,22 @@
     <div class="gallery" aria-live="polite">
       <figure data-tags="woodworking">
         <img src="images/tomswalnut.jpeg" alt="Toms walnut" />
-        <figcaption>Walnut Platters 2025</figcaption>
+        <figcaption>Walnut Platters, 2025</figcaption>
       </figure>
 
       <figure data-tags="cyanotypes">
         <img src="images/kellycyanotype2024.jpeg" alt="Kelly Cyanotype" />
-        <figcaption>Kelly on Portra 2024</figcaption>
+        <figcaption>Kelly on Portra Cyanotype, 2024</figcaption>
       </figure>
 
       <figure data-tags="woodworking">
         <img src="images/allspaltedmaple.jpeg" alt="Spalted Maple" />
-        <figcaption>Spalted Maple Bowls 2024</figcaption>
+        <figcaption>Spalted Maple Bowls, 2024</figcaption>
       </figure>
 
-      <figure data-tags="Pottery">
+      <figure data-tags="pottery">
         <img src="images/potteryset.jpeg" alt="Pottery Set" />
-        <figcaption>Nerikomi Breakfast Pottery Set</figcaption>
+        <figcaption>Nerikomi Breakfast Pottery Set, 2025</figcaption>
       </figure>
 
       <!-- Add more figures with correct data-tags -->
